--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "ng": "ng",
     "start": "ng serve -o --port 4201",
     "build": "ng build",
+    "build-ghpages": "ng build --output-path docs --base-href=/simplilearn-kitchen-story/",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
