Toastr messages implmented

--- a/angular.json
+++ b/angular.json
@@ -28,7 +28,8 @@
               "src/api"
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.css",
+              "node_modules/ngx-toastr/toastr.css"
             ],
             "scripts": []
           },
@@ -106,5 +107,7 @@
       }
     }
   },
-  "defaultProject": "simplilearn-kitchen-story"
+  "cli": {
+    "analytics": "0c2fa6e6-033e-4005-b6c1-3abbfd653651"
+  }
 }
